[package]
authors = [
    "Ryan Williams"
]
description = "Peripheral access API for MSP430f6736a microcontroller"
keywords = ["no-std", "msp430", "ti", "launchpad"]
license = "MIT OR Apache-2.0"
name = "msp430f6736a"
version = "0.1.1"
edition = "2021"

[dependencies]
bare-metal = "1.0.0"
msp430 = "0.3.0"
vcell = "0.1.0"

[dependencies.msp430-rt]
optional = true
version = "0.3.0"

[features]
rt = ["msp430-rt/device"]
